--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
           <img src="images/logo.svg" alt="Логотип компании" />
         </a>
         <ul class="site-nav list">
-          <li><a href="" class="link">Студия</a></li>
-          <li><a href="" class="link">Портфолио</a></li>
+          <li><a href="" class="link current">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
