--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,17 @@
         <a href="tel:+380961111111" class="contact-site">+38 096 111 11 11</a>
       </div>
     </header>
-    <h1>Контент страницы Портфолио</h1>
+    <main>
+      <section>
+        <ul>
+          <li><button type="button">Все</button></li>
+          <li><button type="button">Веб-сайты</button></li>
+          <li><button type="button">Приложения</button></li>
+          <li><button type="button">Дизайн</button></li>
+          <li><button type="button">Маркетинг</button></li>
+        </ul>
+      </section>
+    </main>
     <footer>
       <a href="./index.html">
         <img src="images/logo.svg" alt="Логотип компании" />
