--- a/portfolio.html
+++ b/portfolio.html
@@ -35,6 +35,91 @@
           <li><button type="button">Маркетинг</button></li>
         </ul>
       </section>
+      <section>
+        <ul>
+          <li>
+            <a href="">
+              <img src="images/Технокряк.jpg" alt="Технокряк" />
+              <h2>Технокряк</h2>
+              <p>Веб-сайт</p>
+              <p></p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="images/Постер New Orlean vs Golden Star.jpg"
+                alt="Постер New Orlean vs Golden Star"
+              />
+              <h2>Постер New Orlean vs Golden Star</h2>
+              <p>Дизайн</p>
+              <p></p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="images/Ресторан Seafood.jpg" alt="Ресторан Seafood" />
+              <h2>Ресторан Seafood</h2>
+              <p>Приложение</p>
+              <p></p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="images/Проект Prime.jpg" alt="Проект Prime" />
+              <h2>Проект Prime</h2>
+              <p>Маркетинг</p>
+              <p></p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="images/Проект Boxes.jpg" alt="Проект Boxes" />
+              <h2>Проект Boxes</h2>
+              <p>Приложение</p>
+              <p></p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="images/Inspiration has no Borders.jpg"
+                alt="Inspiration has no Borders"
+              />
+              <h2>Inspiration has no Borders</h2>
+              <p>Веб-сайт</p>
+              <p></p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="images/Издание Limited Edition.jpg"
+                alt="Издание Limited Edition"
+              />
+              <h2>Издание Limited Edition</h2>
+              <p>Дизайн</p>
+              <p></p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="images/Проект LAB.jpg" alt="Проект LAB" />
+              <h2>Проект LAB</h2>
+              <p>Маркетинг</p>
+              <p></p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="images/Growing Business.jpg" alt="Growing Business" />
+              <h2>Growing Business</h2>
+              <p>Приложение</p>
+              <p></p>
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer>
       <a href="./index.html">
