--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="./index.html">
           <img src="images/logo.svg" alt="Логотип компании" />
         </a>
-        <ul class="site-nav list">
+        <ul class="site-nav">
           <li><a href="" class="link current">Студия</a></li>
           <li><a href="./portfolio.html" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
