--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <section class="section">
         <ul>
           <li>
-            <h2 class="section-title">Внимание к деталям</h2>
+            <h2 class="title">Внимание к деталям</h2>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
@@ -54,7 +54,7 @@
         </ul>
         <ul>
           <li>
-            <h2 class="section-title">Пунктуальность</h2>
+            <h2 class="title">Пунктуальность</h2>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
@@ -63,7 +63,7 @@
         </ul>
         <ul>
           <li>
-            <h2 class="section-title">Планирование</h2>
+            <h2 class="title">Планирование</h2>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
@@ -72,7 +72,7 @@
         </ul>
         <ul>
           <li>
-            <h2 class="section-title">Современные технологии</h2>
+            <h2 class="title">Современные технологии</h2>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -93,22 +93,22 @@
         <ul>
           <li>
             <img src="images/img.jpg" alt="команда" width="270" />
-            <h3 class="section-title">Игорь Демьяненко</h3>
+            <h3 class="title">Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="images/imgo.jpg" alt="команда" width="270" />
-            <h3 class="section-title">Ольга Репина</h3>
+            <h3 class="title">Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img src="images/imgn.jpg" alt="команда" width="270" />
-            <h3 class="section-title">Николай Тарасов</h3>
+            <h3 class="title">Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="images/imgm.jpg" alt="команда" width="270" />
-            <h3 class="section-title">Михаил Ермаков</h3>
+            <h3 class="title">Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
