--- a/index.html
+++ b/index.html
@@ -11,15 +11,21 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">
-          <img src="images/logo.svg" alt="Логотип компании" />
+        <a href="./index.html" class="logo-link">
+          <span class="logo-accent">Web</span>Studio
         </a>
-        <ul class="site-nav">
+        <ul class="site-nav list">
           <li><a href="" class="link current">Студия</a></li>
           <li><a href="./portfolio.html" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
@@ -43,37 +49,37 @@
         </section>
       </div>
       <section class="section">
-        <ul>
+        <ul class="benefits-list list">
           <li>
             <h2 class="title">Внимание к деталям</h2>
-            <p>
+            <p class="text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
         </ul>
-        <ul>
+        <ul class="benefits-list list">
           <li>
             <h2 class="title">Пунктуальность</h2>
-            <p>
+            <p class="text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
         </ul>
-        <ul>
+        <ul class="benefits-list list">
           <li>
             <h2 class="title">Планирование</h2>
-            <p>
+            <p class="text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
         </ul>
-        <ul>
+        <ul class="benefits-list list">
           <li>
             <h2 class="title">Современные технологии</h2>
-            <p>
+            <p class="text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -88,46 +94,48 @@
           <img src="images/img3.png" alt="примеры работ" width="370" />
         </div>
       </section>
-      <section class="section">
+      <section class="section team">
         <h2 class="section-title">Наша команда</h2>
-        <ul>
+        <ul class="team-list list">
           <li>
             <img src="images/img.jpg" alt="команда" width="270" />
-            <h3 class="title">Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="team-title">Игорь Демьяненко</h3>
+            <p class="position">Product Designer</p>
           </li>
           <li>
             <img src="images/imgo.jpg" alt="команда" width="270" />
-            <h3 class="title">Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-title">Ольга Репина</h3>
+            <p class="position">Frontend Developer</p>
           </li>
           <li>
             <img src="images/imgn.jpg" alt="команда" width="270" />
-            <h3 class="title">Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="team-title">Николай Тарасов</h3>
+            <p class="position">Marketing</p>
           </li>
           <li>
             <img src="images/imgm.jpg" alt="команда" width="270" />
-            <h3 class="title">Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="team-title">Михаил Ермаков</h3>
+            <p class="position">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">
-        <img src="images/logo.svg" alt="Логотип компании" />
+    <footer class="footer">
+      <a href="./index.html" class="logo-link">
+        <span class="logo-accent">Web</span>Studio
       </a>
       <address>
-        <ul>
+        <ul class="list">
           <li>
-            <a href="">г. Киев, пр-т Леси Украинки, 26</a>
+            <a href="" class="contact">г. Киев, пр-т Леси Украинки, 26</a>
           </li>
           <li>
-            <a href="mailto:info@example.com">info@example.com</a>
+            <a href="mailto:info@example.com " class="contact"
+              >info@example.com</a
+            >
           </li>
           <li>
-            <a href="tel:+380991111111">+38 099 111 11 11 </a>
+            <a href="tel:+380991111111" class="contact">+38 099 111 11 11 </a>
           </li>
         </ul>
       </address>
