--- a/portfolio.html
+++ b/portfolio.html
@@ -10,13 +10,24 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
+    <style>
+      a {
+        text-decoration: none;
+      }
+    </style>
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">
-          <img src="images/logo.svg" alt="Логотип компании" />
+        <a href="./index.html" class="logo-link">
+          <span class="logo-accent">Web</span>Studio
         </a>
         <ul class="site-nav list">
           <li><a href="./index.html" class="link">Студия</a></li>
@@ -33,22 +44,27 @@
     </header>
     <main>
       <section>
-        <ul>
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайты</button></li>
-          <li><button type="button">Приложения</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+        <ul class="list">
+          <li><button type="button" class="filter">Все</button></li>
+          <li><button type="button" class="filter">Веб-сайты</button></li>
+          <li><button type="button" class="filter">Приложения</button></li>
+          <li><button type="button" class="filter">Дизайн</button></li>
+          <li><button type="button" class="filter">Маркетинг</button></li>
         </ul>
       </section>
       <section>
-        <ul>
+        <ul class="list">
           <li>
             <a href="">
-              <img src="images/Технокряк.jpg" alt="Технокряк" />
-              <h2>Технокряк</h2>
-              <p>Веб-сайт</p>
-              <p></p>
+              <img src="images/Технокряк.jpg" alt="Технокряк" width="370" />
+              <h2 class="examplework-title">Технокряк</h2>
+              <p class="examplework-text">Веб-сайт</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
+                vero quos expedita sit voluptas! Quam odio dicta architecto, nam
+                vero suscipit error impedit illum sequi nihil ab a. Itaque,
+                consectetur.
+              </p>
             </a>
           </li>
           <li>
@@ -56,34 +72,69 @@
               <img
                 src="images/Постер New Orlean vs Golden Star.jpg"
                 alt="Постер New Orlean vs Golden Star"
+                width="370"
               />
-              <h2>Постер New Orlean vs Golden Star</h2>
-              <p>Дизайн</p>
-              <p></p>
+              <h2 class="examplework-title">
+                Постер New Orlean vs Golden Star
+              </h2>
+              <p class="examplework-text">Дизайн</p>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta
+                modi, ullam atque excepturi nesciunt voluptatem doloremque
+                reprehenderit eaque ipsa laboriosam? Possimus dolore, voluptates
+                iure accusamus officiis a itaque eveniet ipsam!
+              </p>
             </a>
           </li>
           <li>
             <a href="">
-              <img src="images/Ресторан Seafood.jpg" alt="Ресторан Seafood" />
-              <h2>Ресторан Seafood</h2>
-              <p>Приложение</p>
-              <p></p>
+              <img
+                src="images/Ресторан Seafood.jpg"
+                alt="Ресторан Seafood"
+                width="370"
+              />
+              <h2 class="examplework-title">Ресторан Seafood</h2>
+              <p class="examplework-text">Приложение</p>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas
+                expedita perferendis dolore officiis officia a asperiores ad
+                autem cum ab, maiores odit. Pariatur est quae vero, numquam
+                soluta ratione praesentium.
+              </p>
             </a>
           </li>
           <li>
             <a href="">
-              <img src="images/Проект Prime.jpg" alt="Проект Prime" />
-              <h2>Проект Prime</h2>
-              <p>Маркетинг</p>
-              <p></p>
+              <img
+                src="images/Проект Prime.jpg"
+                alt="Проект Prime"
+                width="370"
+              />
+              <h2 class="examplework-title">Проект Prime</h2>
+              <p class="examplework-text">Маркетинг</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
+                similique sit nam. Veritatis, autem sint, temporibus natus
+                blanditiis laudantium voluptates obcaecati alias deserunt unde
+                omnis eum ad dolor voluptatem velit.
+              </p>
             </a>
           </li>
           <li>
             <a href="">
-              <img src="images/Проект Boxes.jpg" alt="Проект Boxes" />
-              <h2>Проект Boxes</h2>
-              <p>Приложение</p>
-              <p></p>
+              <img
+                src="images/Проект Boxes.jpg"
+                alt="Проект Boxes"
+                width="370"
+              />
+              <h2 class="examplework-title">Проект Boxes</h2>
+              <p class="examplework-text">Приложение</p>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem,
+                similique nulla dolores quae totam non sapiente eaque nesciunt
+                maxime sed quos porro suscipit illo consectetur rem voluptatibus
+                officia! Cum, autem.
+              </p>
             </a>
           </li>
           <li>
@@ -91,10 +142,16 @@
               <img
                 src="images/Inspiration has no Borders.jpg"
                 alt="Inspiration has no Borders"
+                width="370"
               />
-              <h2>Inspiration has no Borders</h2>
-              <p>Веб-сайт</p>
-              <p></p>
+              <h2 class="examplework-title">Inspiration has no Borders</h2>
+              <p class="examplework-text">Веб-сайт</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+                culpa distinctio deleniti ipsam omnis deserunt? Incidunt sit
+                optio repellat atque id, veritatis quod pariatur. Quia quidem
+                voluptates blanditiis cum corrupti.
+              </p>
             </a>
           </li>
           <li>
@@ -102,37 +159,57 @@
               <img
                 src="images/Издание Limited Edition.jpg"
                 alt="Издание Limited Edition"
+                width="370"
               />
-              <h2>Издание Limited Edition</h2>
-              <p>Дизайн</p>
-              <p></p>
+              <h2 class="examplework-title">Издание Limited Edition</h2>
+              <p class="examplework-text">Дизайн</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
+                laudantium dignissimos amet molestias magni neque animi nobis
+                aperiam minus non sint explicabo tempore porro fugit officia
+                provident, unde aut ullam!
+              </p>
             </a>
           </li>
           <li>
             <a href="">
-              <img src="images/Проект LAB.jpg" alt="Проект LAB" />
-              <h2>Проект LAB</h2>
-              <p>Маркетинг</p>
-              <p></p>
+              <img src="images/Проект LAB.jpg" alt="Проект LAB" width="370" />
+              <h2 class="examplework-title">Проект LAB</h2>
+              <p class="examplework-text">Маркетинг</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
+                nemo deserunt sed molestias eos nobis eaque? Mollitia in, rem et
+                doloribus voluptate commodi blanditiis dolorem, ut culpa
+                voluptas velit exercitationem.
+              </p>
             </a>
           </li>
           <li>
             <a href="">
-              <img src="images/Growing Business.jpg" alt="Growing Business" />
-              <h2>Growing Business</h2>
-              <p>Приложение</p>
-              <p></p>
+              <img
+                src="images/Growing Business.jpg"
+                alt="Growing Business"
+                width="370"
+              />
+              <h2 class="examplework-title">Growing Business</h2>
+              <p class="examplework-text">Приложение</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
+                nemo deserunt sed molestias eos nobis eaque? Mollitia in, rem et
+                doloribus voluptate commodi blanditiis dolorem, ut culpa
+                voluptas velit exercitationem.
+              </p>
             </a>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <a href="./index.html">
-        <img src="images/logo.svg" alt="Логотип компании" />
+      <a href="./index.html" class="logo-link">
+        <span class="logo-accent">Web</span>Studio
       </a>
       <address>
-        <ul>
+        <ul class="list">
           <li>
             <a href="">г. Киев, пр-т Леси Украинки, 26</a>
           </li>
