--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="logo-link">
+      <a href="./index.html" class="footerlogo-link">
         <span class="logo-accent">Web</span>Studio
       </a>
       <address>
