--- a/portfolio.html
+++ b/portfolio.html
@@ -204,20 +204,22 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html" class="logo-link">
+    <footer class="footer">
+      <a href="./index.html" class="footerlogo-link">
         <span class="logo-accent">Web</span>Studio
       </a>
       <address>
         <ul class="list">
           <li>
-            <a href="">г. Киев, пр-т Леси Украинки, 26</a>
+            <a href="" class="contact">г. Киев, пр-т Леси Украинки, 26</a>
           </li>
           <li>
-            <a href="mailto:info@example.com">info@example.com</a>
+            <a href="mailto:info@example.com " class="contact"
+              >info@example.com</a
+            >
           </li>
           <li>
-            <a href="tel:+380991111111">+38 099 111 11 11 </a>
+            <a href="tel:+380991111111" class="contact">+38 099 111 11 11 </a>
           </li>
         </ul>
       </address>
